sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:9: error: not found: value fin
for (i<-0 to fin){
             ^