sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {

var a=0
var b=0


	
for (i<-0 to fin){
	for (n<-0 to i){
	a= getValeur(n)
	b= getValeur(n+1)
	if(a>b){echange(n,n+1)}
	}
}
	

}
